syntax = "proto3";

package shortdb.domain.database.v1;

option go_package = "github.com/shortlink-org/shortlink/internal/services/shortdb/domain/database/v1";

import "shortdb/domain/table/v1/table.proto";

message DataBase {
  string name = 1;
  map<string, shortdb.domain.table.v1.Table> tables = 2;
}
